--- a/.gitignore
+++ b/.gitignore
@@ -8,15 +8,10 @@ __pycache__/
 # checkpoint and data folders
 # checkpoints
 lightning_logs
-# *.out
-
-TF2/2021_Nov
-TF2/output
 
 Total.csv
 predictions.csv
-predictions_case.csv
-predictions_case_death.csv
 attention.csv
 scratch/
 *.sif
+_build/
